--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
   --color-text: #000;
   --color-white: #fff;
   --header-height: 80px;
+
+  --default-space: 20px;
+
+  --default-line-height: 20px;
 }
 
 /* General config */
@@ -15,24 +19,71 @@ body {
 p {
   font-family: Georgia, "Times New Roman", serif;
   font-size: 14px;
-  line-height: 20px;
+  line-height: var(--default-line-height);
 }
 
 /* Button */
 .btn {
   border: solid 3px currentColor;
-  padding: 15px 25px;
-  color: var(--color-primary);
+  /*padding: 10px 25px;*/
+  padding: calc(var(--default-space) / 2) calc(var(--default-space)*1.75);
   text-transform: uppercase;
   font-weight: bold;
   font-size: 14px;
-  line-height: 20px;
+  line-height: var(--default-line-height);
   letter-spacing: .1em;
   transition: all .3s ease-in-out;
 }
 
-.btn:hover {
+.btn--white {
   color: var(--color-white);
+}
+
+.btn--white:hover {
+  color: var(--color-primary);
+}
+
+.btn--primary {
+  color: var(--color-primary);
+}
+
+.btn--primary:hover {
+  color: var(--color-text);
+}
+
+.btn--primary--bg-black {
+  color: var(--color-primary);
+}
+
+.btn--primary--bg-black:hover {
+  color: var(--color-text);
+}
+
+/* Heading */
+.heading {
+  font-weight: bold;
+  letter-spacing: .1em;
+  line-height: var(--default-line-height);
+  color: var(--color-text);
+  text-transform: uppercase;
+  margin: 20px 0;
+}
+
+.heading:after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: var(--color-text);
+  margin: 8px auto;
+}
+
+.heading--2 {
+  font-size: 24px;
+}
+
+.heading--3 {
+  font-size: 18px;
 }
 
 /* Header */
@@ -43,11 +94,12 @@ p {
   height: var(--header-height);
   position: fixed;
   top: 0;
+  z-index: 10;
 }
 
 .header__nav {
   text-align: right;
-  margin-top: 20px;
+  margin-top: var(--default-space)
 }
 
 .header__nav ul li {
@@ -64,7 +116,7 @@ p {
   text-transform: uppercase;
   letter-spacing: .1em;
   font-size: 14px;
-  line-height: 20px;
+  line-height: var(--default-line-height);
   padding: 10px 0;
   transition: color .2s ease-in-out;
 }
@@ -73,8 +125,8 @@ p {
   color: var(--color-white);
 }
 
+/* Sections */
 /* Intro */
-
 .section-intro {
   width: 100%;
   height: 380px;
@@ -121,4 +173,30 @@ p {
   font-weight: bold;
   font-size: 14px;
   letter-spacing: .1em;
+}
+
+/* Products */
+.section-products {
+  margin-top: 60px;
+  text-align: center;
+}
+
+.products__list li {
+  background: var(--color-primary);
+}
+
+.products__img {
+  background-color: var(--color-text);
+  padding: 20px;
+}
+
+/* the list has float in grid class, so we need to clear float */
+.products__cta {
+  padding-top: calc(var(--default-space) * 2);
+  text-align: center;
+  clear: both;
+}
+
+.products__cta p {
+  margin-bottom: var(--default-space);
 }
