--- a/css/sobre.css
+++ b/css/sobre.css
@@ -42,7 +42,7 @@
 {
   font-size: 18px;
   line-height: 1.5em;
-  font-family: Georgia, "Times New Roman", serif;
+  font-family: var(--font-georgia);
 }
 
 .section-mission-about p + p {
