--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,25 @@
 :root {
   --color-primary: #fec63e;
   --color-text: #000;
+  --color-black: #000;
   --color-white: #fff;
   --header-height: 80px;
 
   --default-space: 20px;
 
   --default-line-height: 20px;
+
+  --font-georgia: Georgia, "Times New Roman", serif;
 }
 
 /* General config */
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-georgia);
 }
 
 p {
-  font-family: Georgia, "Times New Roman", serif;
+  font-family: var(--font-georgia);
   font-size: 14px;
   line-height: var(--default-line-height);
 }
